<resources>
    <string name="app_name">Login Page</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="have_account">Do you have an account? </string>
    <string name="login">Login</string>
</resources>